--- a/app/views/chats/_message.html.erb
+++ b/app/views/chats/_message.html.erb
@@ -1,4 +1,4 @@
-<div class="prompt-message">
+<div class="chat-message">
   <p><strong>You:</strong> <%= query %></p>
   <p><strong>AI:</strong> <%= answer %></p>
 </div>
