add doc upload style

--- a/app/views/chats/index.html.erb
+++ b/app/views/chats/index.html.erb
@@ -1,5 +1,5 @@
 <div class="flex flex-col items-center w-2xl">
-  <h1 class="text-xl font-bold text-center mb-4 text-gray-500">Agent FAQ &#x1F916;</h1>
+  <h1 class="text-xl font-bold text-center mb-4 text-gray-500">RAG Powered AI Chat &#x1F916;</h1>
 
   <div id="chat-container" class="w-full max-w-xl border bg-gray-50 border-gray-300 rounded-md shadow-lg p-4 flex flex-col h-[550px]">
     <div id="chat-messages" class="flex flex-col overflow-y-auto h-full space-y-2 pb-4">
